deploy/overlays/local/patch-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
spec:
  rules:
    - host: grafana.192.168.56.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm
                port:
                  name: grafana
