deploy/overlays/local/patch-otlp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otlp
  namespace: observability
spec:
  rules:
    - host: otlp.192.168.56.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-collector
                port:
                  name: otlp-http
